# gold

./: CHANGES  DATABASE  INSTALL  INSTALL.in  LICENSE  Makefile.in  README  README.in  bank.gold.in  bank.sql.in  base.sql.in  configure  configure.ac
cgi-bin/: adminAction.cgi  balance.cgi  create.cgi  delete.cgi  deposit.cgi  gold.cgi  list.cgi  login.cgi  modify.cgi  navbar.cgi  precharge.cgi  precreate.cgi  predeposit.cgi  premodify.cgi  prequery.cgi  prerefund.cgi  prescreen.cgi  prestatement.cgi  pretransfer.cgi  prewithdraw.cgi  refund.cgi  selectAccount.cgi  statement.cgi  status.cgi  transfer.cgi  undelete.cgi  unknown.cgi  usage.cgi  welcome.cgi  withdraw.cgi
cgi-bin/scripts/: menus.js  sorttable.js
doc/: FaultTolerance.doc  accounts.sgml  allocations.sgml  appendix_a.sgml  chargerates.sgml  configuration.sgml  customize.sgml  gettingadvanced.sgml  gettingstarted.sgml  goldsh.sgml  installation.sgml  integration.sgml  jobs.sgml  legalnotice.sgml  machines.sgml  overview.sgml  passwords.sgml  projects.sgml  quotations.sgml  reservations.sgml  roles.sgml  userguide.sgml  users.sgml
etc/: gold-oscar.spec.in  gold.conf.dist.in  gold.d.in  gold.spec.in  goldd.conf.dist.in  goldj.conf.dist.in
gui/CVS/: Repository  Root
gui/src/gold/web/client/: AccountBean.java  ConditionBean.java  ElementUtil.java  RequestBean.java  UserBean.java
gui/web/: admin_create.xsl  admin_delete.xsl  admin_input.jsp  admin_modify.xsl  admin_objects.xsl  admin_options.xsl  admin_query.xsl  admin_searchConditions.xsl  changeComboJavaScript.xsl  charge_job.jsp  charge_job.xsl  chooser.jsp  create_account.jsp  create_account.xsl  create_project.jsp  create_project.xsl  create_quotation.jsp  create_quotation.xsl  create_reservation.jsp  create_reservation.xsl  create_role.jsp  create_role.xsl  create_template.jsp  create_template.xsl  display_balance.jsp  display_balance.xsl  index.jsp  initVarsRoles.xsl  intro.html  intro.jsp  list_transaction.jsp  list_transaction.xsl  make_deposit.jsp  make_deposit.xsl  modify_account.jsp  modify_account.xsl  modify_allocation.xsl  modify_complex_object_javascript.xsl  modify_project.jsp  modify_project.xsl  (+33 more)
gui/web/WEB-INF/: web.xml
gui/web/etc/: gold.conf
gui/web/shared/: admin_fields.js  admin_input.css  admin_options.js  admin_query.js  admin_searchConditions.js  gold.css  menus.js  modify_select.js  roleUtil.js  sniffer.js  util.js
lib/: Gold.pm.in  gold.war  sssrmap.py
lib/Gold/: Assignment.pm  Bank.pm  Base.pm  CGI.pm  Cache.pm  Chunk.pm  Client.pm  Condition.pm  Database.pm  Datum.pm  Exception.pm  Global.pm.in  Message.pm  Object.pm  Option.pm  Proxy.pm  Reply.pm  Request.pm  Response.pm  Selection.pm  ServiceDirectory.pm
src/: GoldClient.java  Test.java  check_module.pl  gauth.c  gbalance.pl  gchaccount.pl  gchalloc.pl  gcharge.pl  gchmachine.pl  gchpasswd.pl  gchproject.pl  gchquote.pl  gchres.pl  gchuser.pl  gdeposit.pl  glsaccount.pl  glsalloc.pl  glsjob.pl  glsmachine.pl  glsproject.pl  glsquote.pl  glsres.pl  glstxn.pl  glsuser.pl  gmkaccount.pl  gmkmachine.pl  gmkproject.pl  gmkuser.pl  gold_init.pl.in  goldd.pl.in  goldj.c.in  goldsh.pl.in  gquote.pl  grefund.pl  greserve.pl  grmaccount.pl  grmalloc.pl  grmmachine.pl  grmproject.pl  grmquote.pl  (+9 more)
src/gold/: Assignment.java  AttributeComparator.java  Base64.java  CanonicalXMLOutputter.java  Chunk.java  Condition.java  Config.java  Constants.java  Datum.java  Gold.java.in  GoldException.java  Message.java  Object.java  Option.java  Reply.java  Request.java  Response.java  Selection.java
sssrmap/: Makefile  _sssrmap.i  _sssrmap_wrap.c  sssrmap.c  sssrmap.h  sssrmap.py  ssstest.c  ssstest.py
test/: gettingstarted.sh  update_db_from_2.b2_to_2.0
